tests/snapshots/run_wpt_conformance__trtx_logicalOr_uint8_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "logical_or.https.any.js",
    "logicalOr uint8 0D scalar",
    "trtx",
    Failed {
        msg: Some(
            "logical_or :: logicalOr uint8 0D scalar: index 0: actual=0 expected=1 tolerance=0\n  inputs: inputA: [1]; inputB: [1]\n  expected output: [1]\n  actual output: [0]\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: u8[];\n    inputB: u8[];\n  }\n\n  nodes {\n    [output] = logicalOr(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
